--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^5.2.1",
     "mongoose": "^9.1.2",
     "multer": "^2.0.2",
+    "os-utils": "^0.0.14",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
